--- a/scss/components/_layouts.scss
+++ b/scss/components/_layouts.scss
@@ -297,7 +297,7 @@ main{
         justify-content: center;
         flex-wrap: wrap;
         margin-bottom: 50px;
-        div{
+        .indumentaria-productos{
             width: 340px;
             height: auto;
             @extend %flex;
@@ -326,7 +326,7 @@ main{
                     height: 20px;
                     margin-top: 7px;
                 }
-                div{
+                .precios-contenedor{
                     width: 250px;
                     height: 20px;
                     display: flex;
